--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions:
 
 env:
   PREVIEW_TASK: publishToSonatype
-  PUBLISH_TASK: publishMavenPublicationToSonatypeRepository
+  PUBLISH_TASK: publishToSonatype closeSonatypeStagingRepository
 
 jobs:
   release-to-maven-central-snapshot:
@@ -85,6 +85,9 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
+    defaults:
+      run:
+        working-directory: ./
     steps:
     - uses: actions/checkout@v4
     - name: Setup JDK
@@ -101,14 +104,12 @@ jobs:
       env:
         ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
         OUTPUT_PATH: 'local.properties'
-      working-directory: ./
     - name: Download file
       run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
       shell: pwsh
       env:
         ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
         OUTPUT_PATH: 'secring.gpg'
-      working-directory: ./
     - name: Copy secring
       run: |
         Copy-Item secring.gpg components/abstractions/ -Verbose
@@ -120,34 +121,44 @@ jobs:
         Copy-Item secring.gpg components/http/okHttp/ -Verbose
         Copy-Item secring.gpg components/bundle/ -Verbose
       shell: pwsh
-      working-directory: ./
-    - name: Build with Gradle
-      run: ./gradlew --no-daemon build
-      working-directory: ./
+    - name: Publish to local Maven cache for validation
+      run: ./gradlew --no-daemon publishToMavenLocal
+    - name: Get current SNAPSHOT version
+      shell: pwsh
+      run: |
+        $contents = Get-Content gradle.properties -Raw
+        $major = $contents | Select-String -Pattern 'mavenMajorVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
+        $minor = $contents | Select-String -Pattern 'mavenMinorVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
+        $patch = $contents | Select-String -Pattern 'mavenPatchVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
+        $version = "$major.$minor.$patch-SNAPSHOT"
+        echo "Current version is $version"
+        echo "PACKAGE_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+    - name: Inspect contents of local Maven cache
+      shell: pwsh
+      run: |
+        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-abstractions -Version $PACKAGE_VERSION
+        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-authentication-azure -Version $PACKAGE_VERSION
+        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-http-okHttp -Version $PACKAGE_VERSION
+        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-form -Version $PACKAGE_VERSION
+        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-json -Version $PACKAGE_VERSION
+        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-text -Version $PACKAGE_VERSION
+        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-multipart -Version $PACKAGE_VERSION
     - name: Publish Release abstractions #publishing all components at once often results in split staging repos which fails to release
       run: ./gradlew --no-daemon :components:abstractions:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Publish Release serialization form
       run: ./gradlew --no-daemon :components:serialization:form:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Publish Release serialization json
       run: ./gradlew --no-daemon :components:serialization:json:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Publish Release serialization text
       run: ./gradlew --no-daemon :components:serialization:text:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Publish Release serialization multipart
       run: ./gradlew --no-daemon :components:serialization:multipart:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Publish Release authentication azure
       run: ./gradlew --no-daemon :components:authentication:azure:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Publish Release okHttp
       run: ./gradlew --no-daemon :components:http:okHttp:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Publish Release bundle
       run: ./gradlew --no-daemon :components:bundle:$PUBLISH_TASK -PmavenCentralSnapshotArtifactSuffix=""
-      working-directory: ./
     - name: Release
       uses: anton-yurchenko/git-release@v6.0
       env:
