--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
         $patch = $contents | Select-String -Pattern 'mavenPatchVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
         $version = "$major.$minor.$patch-SNAPSHOT"
         echo "Current version is $version"
-        echo "PACKAGE_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+        echo "PACKAGE_VERSION=$version" >> $Env:GITHUB_ENV
     - name: Inspect contents of local Maven cache
       shell: pwsh
       run: |
