--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -457,3 +457,5 @@ jobs:
         PRE_RELEASE: "false"
         CHANGELOG_FILE: "CHANGELOG.md"
         ALLOW_EMPTY_CHANGELOG: "true"
+      with:
+        args: components/**/build/libs/*.jar
