--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment: maven_central_snapshot
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
@@ -56,37 +57,13 @@ jobs:
         Copy-Item secring.gpg components/http/okHttp/ -Verbose
         Copy-Item secring.gpg components/bundle/ -Verbose
       shell: pwsh
-    - name: Publish to local Maven cache
-      run: ./gradlew --no-daemon publishToMavenLocal
-    - name: Get current SNAPSHOT version
-      shell: pwsh
-      run: |
-        $contents = Get-Content gradle.properties -Raw
-        $major = $contents | Select-String -Pattern 'mavenMajorVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
-        $minor = $contents | Select-String -Pattern 'mavenMinorVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
-        $patch = $contents | Select-String -Pattern 'mavenPatchVersion = ([0-9]+)' | ForEach-Object { $_.Matches.Groups[1].Value }
-        $version = "$major.$minor.$patch-SNAPSHOT"
-        echo "Current version is $version"
-        echo "PACKAGE_VERSION=$version" >> $Env:GITHUB_ENV
-    - name: Inspect contents of local Maven cache
-      shell: pwsh
-      run: |
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-abstractions -Version $env:PACKAGE_VERSION
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-authentication-azure -Version $env:PACKAGE_VERSION
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-http-okHttp -Version $env:PACKAGE_VERSION
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-form -Version $env:PACKAGE_VERSION
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-json -Version $env:PACKAGE_VERSION
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-text -Version $env:PACKAGE_VERSION
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-serialization-multipart -Version $env:PACKAGE_VERSION
-        .\scripts\ValidatePackageContents.ps1 -ArtifactId microsoft-kiota-bundle -Version $env:PACKAGE_VERSION
     - name: Publish to Snapshot Repository
       run: ./gradlew --no-daemon $PREVIEW_TASK
       working-directory: ./
 
   validate-package-contents:
-    if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    environment: maven_central
+    environment: ${{ contains(github.ref, 'refs/tags/v') && 'maven_central' || 'maven_central_snapshot' }}
     defaults:
       run:
         working-directory: ./
@@ -186,7 +163,7 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
-    needs: [validate-package-contents, release-abstractions-maven-central]
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
@@ -221,7 +198,7 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
-    needs: [validate-package-contents, release-abstractions-maven-central]
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
@@ -256,7 +233,7 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
-    needs: [validate-package-contents, release-abstractions-maven-central]
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
@@ -291,7 +268,7 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
-    needs: [validate-package-contents, release-abstractions-maven-central]
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
@@ -326,7 +303,7 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
-    needs: [validate-package-contents, release-abstractions-maven-central]
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
@@ -361,7 +338,7 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
-    needs: [validate-package-contents, release-abstractions-maven-central]
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
@@ -396,15 +373,7 @@ jobs:
     if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     environment: maven_central
-    needs: [
-      validate-package-contents,
-      release-abstractions-maven-central,
-      release-http-maven-central,
-      release-serialization-form-maven-central,
-      release-serialization-json-maven-central,
-      release-serialization-text-maven-central,
-      release-serialization-multipart-maven-central
-    ]
+    needs: validate-package-contents
     defaults:
       run:
         working-directory: ./
